MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/Commission_Rules__c.object-meta.xml
<CustomObject>
    <label>Commission Rules</label>
    <nameField>
        <displayFormat>CMR-{0000}</displayFormat>
        <label>Commission Rules</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>