MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Commission_Release_Split__c.field-meta.xml
<CustomField>
    <fullName>Commission_Release_Split__c</fullName>
    <label>Commission Release Split</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30-70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>