MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Direct_Commission_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Commission_Sales_Manager__c</fullName>
    <label>Direct Commission - Sales Manager %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>