MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Equity_to_Release_Commission__c.field-meta.xml
<CustomField>
    <fullName>Equity_to_Release_Commission__c</fullName>
    <label>Equity % to Release Commission</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>