MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Indirect_Commission__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Commission__c</fullName>
    <label>Indirect Commission %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>