MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Indirect_Commission_Amount_Internal__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Commission_Amount_Internal__c</fullName>
    <label>Indirect Commission Amount - Internal</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>