MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Indirect_Commission_Amount_Intrl_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Commission_Amount_Intrl_Mgr__c</fullName>
    <label>Indirect Commission Amount - Intrl Mgr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>