MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Inventory_Launch_Category__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Launch_Category__c</fullName>
    <label>Inventory/Launch Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch Sales</fullName>
            </value>
            <value>
                <fullName>Inventory Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>