MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Inventory_Launch_Category_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Launch_Category_After_Days__c</fullName>
    <label>Inventory/Launch Category - After Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>