MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Is_Bulk_Commission__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk Commission</label>
    <type>Checkbox</type>
</CustomField>