MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Management_Referral_Amount_UnitAllocated__c.field-meta.xml
<CustomField>
    <fullName>Management_Referral_Amount_UnitAllocated__c</fullName>
    <label>Management Referral Amount UnitAllocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>