MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Management_Referral_Unit_Unallocated__c.field-meta.xml
<CustomField>
    <fullName>Management_Referral_Unit_Unallocated__c</fullName>
    <label>Management Referral % - Unit Unallocated</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>