MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Minimum_Units_to_be_Sold__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Units_to_be_Sold__c</fullName>
    <label>Minimum Units to be Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>