MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Number_Of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Bedrooms__c</fullName>
    <label>Number Of Bedrooms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>49</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>