MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/NW_Mega_Mansion__c.field-meta.xml
<CustomField>
    <fullName>NW_Mega_Mansion__c</fullName>
    <label>NW - Mega Mansion</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>