MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Commission Rules</relationshipLabel>
    <relationshipName>Commission_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>