MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Sales_Values_From__c.field-meta.xml
<CustomField>
    <fullName>Sales_Values_From__c</fullName>
    <label>Sales Values From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>