MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <label>Sold By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Agent</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>