MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Staff_Referral__c.field-meta.xml
<CustomField>
    <fullName>Staff_Referral__c</fullName>
    <label>Staff Referral %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>