MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Staff_Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Staff_Referral_Amount__c</fullName>
    <label>Staff Referral Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>