MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Commission Rules</relationshipLabel>
    <relationshipName>Commission_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>