MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/validationRules/Start_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(StartDate__c &gt; TODAY(), EndDate__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Start Date Should be in Past or Equal Today &amp; End Date Should be Greater than or equal today date!</errorMessage>
</ValidationRule>