MODON MRE BPDEV/force-app/main/default/objects/Commission_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Sales_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inventory_Launch_Category__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>